--- a/aemedge/blocks/tiles/tiles.css
+++ b/aemedge/blocks/tiles/tiles.css
@@ -145,6 +145,8 @@
       font-size: var(--udexTypographyHeadingMediumXXSFontSize);
       height: 100%;
       padding: var(--udexSpacer24, 24px) var(--udexSpacer20, 20px);
+      padding-top: var(--udexSpacer16, 16px);
+      padding-bottom: var(--udexSpacer16, 16px);
     }
 
     & .tile-image img {
@@ -154,6 +156,7 @@
 
     & .tile-body {
       margin: 16px 0 0;
+      margin: 0;
     }
   }
 
